<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/alItemSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sample_word"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/alItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignBaseline="@+id/alItemWarning"
            android:layout_marginEnd="4dp"
            android:text="@string/sample_word"
            android:textColor="@color/warning_dark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/alItemWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alItemType"
            android:text="@string/sample_digit"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alItemLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:text="@string/sample_digit"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alItemShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alItemSymbol"
            android:layout_marginStart="8dp"
            android:text="@string/sample_word"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/alItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alItemSymbol"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/alItemShortName"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_error"
            android:visibility="invisible"
            android:contentDescription="@string/sample_icon"
            android:tooltipText="@string/tooltip_info"
            tools:targetApi="o" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>